# supplements

./: Cargo.toml  README.md
examples/: generate.rs
src/: arg_context.rs  completion.rs  error.rs  history.rs  id.rs  lib.rs  main.rs  utils.rs
src/generate/: abstraction.rs  config.rs  gen_default_impl.rs  mod.rs  utils.rs
supplements/: Cargo.toml
supplements-example/: Cargo.toml  build.rs  install.sh
supplements-example/shell/: qit.bash  qit.fish  qit.zsh
supplements-example/src/: args.rs  main.rs
supplements-tests/: Cargo.toml  build.rs
supplements-tests/src/: args.rs  dummy.rs  lib.rs
supplements/examples/: generate.rs
supplements/src/: completion.rs  error.rs  history.rs  id.rs  lib.rs  parsed_flag.rs  utils.rs
supplements/src/generate/: mod.rs  utils.rs
supplements/tests/: integration.rs
tests/: integration.rs
