[workspace]
resolver = "3"
members = ["supplements-example", "supplements-tests"]

[package]
name = "supplements"
version = "0.1.3"
authors = ["why8ther <lturtsamuel@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
description = "The awesome supplement for your awesome CLI app"

[dependencies]
log = { version = "0.4.18", default-features = false }
clap3 = { package = "clap", version = "3", optional = true }
clap4 = { package = "clap", version = "4", optional = true }

[dev-dependencies]
env_logger = '0.11'

[features]
default = ["clap-4"]
clap-3 = ["clap3"]
clap-4 = ["clap4"]
