[package]
name = "supplements-example"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
supplements = { path = "../supplements" }
env_logger = '*'
log = '*'

[build-dependencies]
clap = { version = "4", features = ["derive"] }
supplements = { path = "../supplements" }
