[package]
name = "supplements-tests"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
supplements = { path = "..", default-features = false }
env_logger = '*'
log = '*'

[build-dependencies]
supplements = { path = ".." }
clap = { version = "4", features = ["derive"] }
