[package]
name = "supplements"
version = "0.1.0"
authors = ["why8ther <lturtsamuel@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
description = "The awesome supplement for your awesome CLI app"

[dependencies]
log = '*'
clap = { version = "4" }

[dev-dependencies]
env_logger = '*'
clap = { version = "4", features = ["derive"] }
